--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Ben & Kayla Links</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Ben and Kaylas links page">
+  <meta name="author" content=" Ben & Kayla">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
