add favicons + Blog

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
 
 </head>
 <body>
@@ -46,8 +49,8 @@
 
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
-        <!-- Website -->
-        <a class="button button-website" href="https://benandkayla.com"><img class="icon" src="icons/website.svg">Blog</a>
+        <!-- Blog -->
+        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg">Blog</a>
           <br>
 
         <!-- Twitter -->
