fix logo alt text

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
         <!-- Blog -->
-        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg">Blog</a>
+        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog</a>
           <br>
 
         <!-- Twitter -->
-        <a class="button button-twitter" href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg">Twitter</a>
+        <a class="button button-twitter" href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
           <br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="https://www.instagram.com/ben.and.kayla/"><img class="icon" src="icons/instagram.svg">Instagram</a>
+        <a class="button button-instagram" href="https://www.instagram.com/ben.and.kayla/"><img class="icon" src="icons/instagram.svg" alt="Instagram logo">Instagram</a>
           <br>
 
         <br>
