--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <!-- Blog -->
         <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog</a>
           <br>
+        <!-- Photo Website -->
+        <a class="button button-website" href="https://ohe.photos"><img class="icon" src="icons/website.svg" alt="Ben and Kayla buy our prints">Buy Our Prints</a>
+          <br>
 
         <!-- Twitter -->
         <a class="button button-twitter" href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
