--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <br>
 
         <!-- Blog -->
-        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog</a>
+        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Our Blog</a>
           <br>
 
         <!-- Twitter -->
@@ -66,7 +66,7 @@
           <br>
 
         <br>
-        <p>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</p>
+        <small>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</small>
 
       </div>
     </div>
