--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="preload" href="css/fonts.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/fonts.css"></noscript>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
