--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <!-- Replace # with your profile URL. Delete whatever you don't need & create your own brand styles in css/brands.css -->
 
         <!-- Photo Website -->
+        <a class="button button-website" href="https://registry.theknot.com/kayla-haberer-benjamin-ohe-june-2021-nc/45159569"><img class="icon" src="icons/website.svg" alt="Ben and Kayla Registry">Ben and Kayla Registry</a>
+          <br>
+
+        <!-- Photo Website -->
         <a class="button button-website" href="https://ohe.photos"><img class="icon" src="icons/website.svg" alt="Ben and Kayla buy our prints">Buy Our Prints</a>
           <br>
 
