Swapped for Amazon Link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p> </p>
 
         <!-- Photo Website -->
-        <a class="button button-website" href="https://registry.theknot.com/kayla-haberer-benjamin-ohe-june-2021-nc/45159569"><img class="icon" src="icons/website.svg" alt="Ben and Kayla Registry">Ben and Kayla Registry</a>
+        <a class="button button-website" href="https://www.amazon.com/wedding/registry/2WRN6RP8A4RG0"><img class="icon" src="icons/website.svg" alt="Ben and Kayla Registry">Ben and Kayla Registry</a>
           <br>
 
         <!-- Photo Website -->
