--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <h1></h1>
 
         <!-- Short Bio -->
-        <p> </p>
+        <p> </p> https://benandkayla.com/ghost/#/site
 
-        <!-- Photo Website -->
-        <a class="button button-website" href="https://ohe.photos"><img class="icon" src="icons/website.svg" alt="Ben and Kayla buy our prints">Buy Our Prints</a>
+        <!-- Blog-Post -->
+        <a class="button button-blog" href="https://benandkayla.com/2021-iceland-recommendations/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: 2021 Iceland recommendations</a>
           <br>
 
         <!-- Blog -->
@@ -62,6 +62,10 @@
 
         <!-- Instagram -->
         <a class="button button-instagram" href="https://www.instagram.com/ben.and.kayla/"><img class="icon" src="icons/instagram.svg" alt="Instagram logo">Instagram</a>
+          <br>
+
+        <!-- Photo Website -->
+        <a class="button button-website" href="https://ohe.photos"><img class="icon" src="icons/website.svg" alt="Ben and Kayla buy our prints">Buy Our Prints</a>
           <br>
 
         <br>
