--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <h1></h1>
 
         <!-- Short Bio -->
-        <p> </p> https://benandkayla.com/ghost/#/site
+        <p> </p>
 
         <!-- Blog-Post -->
-        <a class="button button-blog" href="https://benandkayla.com/2021-iceland-recommendations/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: 2021 Iceland recommendations</a>
+        <a class="button button-blog" href="https://benandkayla.com/2021-iceland-recommendations/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: 2021 Iceland</a>
           <br>
 
         <!-- Blog -->
