--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p> </p>
 
         <!-- Blog-Post -->
-        <a class="button button-blog" href="https://benandkayla.com/2021-iceland-recommendations/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: 2021 Iceland</a>
+        <a class="button button-blog" href="https://benandkayla.com/fun-in-the-blue-ridge-mountains/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: Travel the Blue Ridge Mountains/a>
           <br>
 
         <!-- Blog -->
