--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Our Blog</a>
           <br>
 
+        <!-- youtube -->
+        <a class="button button-youtube" href="https://www.youtube.com/channel/UCPaFtWtMt2ZtkKVjxP-Hluw"><img class="icon" src="icons/youtube.svg" alt="Youtube logo">B&K Youtube</a>
+          <br>
+
         <!-- Twitter -->
         <a class="button button-twitter" href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
           <br>
