--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <!-- Short Bio -->
         <p> </p>
 
-        <!-- Blog-Post -->
-        <a class="button button-blog" href="https://benandkayla.com/fun-in-the-blue-ridge-mountains/"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Blog: Blue Ridge Mountains</a>
+        <!-- active-Post -->
+        <a class="button button-youtube" href="https://www.youtube.com/watch?v=tQtRzSPuis8"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day2</a>
+          <br>
           <br>
 
         <!-- Blog -->
