--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         <a class="button button-instagram" href="https://www.instagram.com/ben.and.kayla/"><img class="icon" src="icons/instagram.svg" alt="Instagram logo">Instagram</a>
           <br>
 
+        <!-- Pinterest -->
+        <a class="button button-pinterest" href="https://www.pinterest.com/benjaminandkayla/" target="_blank" rel="noopener"><img class="icon" src="icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
+          <br>
+
         <!-- Photo Website -->
         <a class="button button-website" href="https://ohe.photos"><img class="icon" src="icons/website.svg" alt="Ben and Kayla buy our prints">Buy Our Prints</a>
           <br>
