--- a/index.html
+++ b/index.html
@@ -40,35 +40,19 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
-        <!--
-
-          ## Getting Started with LittleLink
-
-          This page has been built with every pre-designed button available in LittleLink by default. You can rearrange and delete as needed.
-
-          You can add your own brand or others brands you may need in the `css/brands.css` file.
-
-          Edit the "Your Image Here" section to add your own personal branding, like a picture of yourself or your brand logo!
-
-          Edit the "Your Name" section to change the page heading. You can use something like your name, your social handle, or your brand name.
-
-          Edit the "Short Bio" section tell users about yourself or your brand.
-
-        -->
-
-        <!-- Your Image Here -->
+        <!-- B&K Image Here -->
         <img class="avatar" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="Ben and Kayla Logo">
 
         <!-- Your Name -->
         <h1></h1>
 
         <!-- Short Bio -->
-        <p> </p>
-
+        <h3>Recommended Post:</h3>
         <!-- active-Post -->
         <a class="button button-youtube" href="https://www.youtube.com/watch?v=tQtRzSPuis8"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day2</a>
           <br>
-          <br>
+
+        <h3>Links:</h3>
 
         <!-- Blog -->
         <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Our Blog</a>
@@ -101,7 +85,5 @@
     </div>
   </div>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
