--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Short Bio -->
         <h3>Recommended Post:</h3>
         <!-- active-Post -->
-        <a class="button button-youtube" href="https://www.youtube.com/watch?v=tQtRzSPuis8"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day2</a>
+        <a class="button button-youtube" href="https://youtu.be/nzbWiVOd2bk"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day3</a>
           <br>
 
         <h3>Links:</h3>
