--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Short Bio -->
         <h3>Recommended Post:</h3>
         <!-- active-Post -->
-        <a class="button button-youtube" href="https://youtu.be/l3R5o2oksuQ"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day 4</a>
+        <a class="button button-youtube" href="https://youtu.be/l31yR8vGkj4"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Vlog: Iceland Day 5</a>
           <br>
 
         <h3>Links:</h3>
