--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Short Bio -->
         <h3>Recommended Post:</h3>
         <!-- active-Post -->
-        <a class="button button-youtube" href="https://youtu.be/tVl7kLwt6B0"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Content Storage for Creators</a>
+        <a class="button button-youtube" href="https://youtu.be/_oiOaDFCLbg"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Whats in Our Bag</a>
           <br>
 
         <h3>Links:</h3>
