--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         <!-- Short Bio -->
         <h3>Recommended Post:</h3>
         <!-- active-Post -->
-        <a class="button button-youtube" href="https://youtu.be/tVl7kLwt6B0"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Content Storage for Creators</a>
+        <a class="button button-yt" href="https://youtu.be/_oiOaDFCLbg"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Whats in Our Bag</a>
           <br>
 
         <h3>Links:</h3>
 
         <!-- Blog -->
-        <a class="button button-blog" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Our Blog</a>
+        <a class="button button-web" href="https://benandkayla.com"><img class="icon" src="icons/blog.svg" alt="Ben and Kayla Blog Icon">Our Blog</a>
           <br>
 
         <!-- youtube -->
-        <a class="button button-youtube" href="https://www.youtube.com/channel/UCPaFtWtMt2ZtkKVjxP-Hluw"><img class="icon" src="icons/youtube.svg" alt="Youtube logo">B&K Youtube</a>
+        <a class="button button-yt" href="https://www.youtube.com/channel/UCPaFtWtMt2ZtkKVjxP-Hluw"><img class="icon" src="icons/youtube.svg" alt="Youtube logo">B&K Youtube</a>
           <br>
 
         <!-- Twitter -->
-        <a class="button button-twitter" href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
+        <a class="button button-twit " href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
           <br>
 
         <!-- Instagram -->
