--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="column" style="margin-top: 10%">
 
         <!-- B&K Image Here -->
-        <img class="avatar" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="Ben and Kayla Logo">
+        <img class="avatar" src="images/avatar.png" srcset="images/avatar.png" alt="Ben and Kayla Logo">
 
         <!-- Your Name -->
         <h1></h1>
