--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Short Bio -->
         <h3>Recommended Post:</h3>
         <!-- active-Post -->
-        <a class="button button-yt" href="https://youtu.be/_oiOaDFCLbg"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">Whats in Our Bag</a>
+        <a class="button button-yt" href="https://youtube.com/playlist?list=PLba3kp0lTMfTxtP51srhYVzEvHYvkLTXY"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">YT Europe Playlist</a>
           <br>
 
         <h3>Links:</h3>
