--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         <a class="button button-yt" href="https://www.youtube.com/channel/UCPaFtWtMt2ZtkKVjxP-Hluw"><img class="icon" src="icons/youtube.svg" alt="Youtube logo">B&K Youtube</a>
           <br>
 
+        <!-- Vero -->
+        <a class="button button-vero" href="https://vero.co/benandkayla" target="_blank" rel="noopener"><img class="icon" src="icons/vero.svg" alt="VERO Logo">Follow on VERO</a>
+          <br>
+
         <!-- Twitter -->
         <a class="button button-twit " href="https://twitter.com/ben_and_kayla"><img class="icon" src="icons/twitter.svg" alt="Twitter logo">Twitter</a>
           <br>
