--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <div class="column" style="margin-top: 10%">
 
         <!-- B&K Image Here -->
-        <img class="avatar" src="images/avatar.png" srcset="images/avatar.png" alt="Ben and Kayla Logo">
+        <img class="avatar" src="images/avatar.webp" srcset="images/avatar.webp" alt="Ben and Kayla Logo">
 
         <!-- Your Name -->
         <h1></h1>
 
         <!-- Short Bio -->
-        <h3>Recommended Post:</h3>
+        <h3>Recommended Link:</h3>
         <!-- active-Post -->
         <a class="button button-yt" href="https://youtube.com/playlist?list=PLba3kp0lTMfTxtP51srhYVzEvHYvkLTXY"><img class="icon" src="icons/youtube.svg" alt="Ben and Kayla YT">YT Europe Playlist</a>
           <br>
