--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="utf-8">
   <title>LittleLink</title>
   <meta name="description" content="https://bxk.link">
-  <meta name="author" content="Ben Ohe">
+  <meta name="author" content="Ben & Kayla Ohe">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -71,7 +71,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/bxk.svg" class="avatar" srcset="images/bxk.svg 2x" alt="">
+        <img src="images/bxk.svg" class="avatar" srcset="images/bxk.svg 2x" alt="BxK logo">
 
         <!-- Title -->
         <h1 role="heading">Ben & Kayla</h1>
