--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Light:  css/skeleton-light.css
             Dark:   css/skeleton-dark.css
      -->
-    <link rel="stylesheet" href="css/skeleton-auto.css">
+    <link rel="stylesheet" href="css/skeleton-dark.css">
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
@@ -40,7 +40,11 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/littlelink.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
 
 </head>
 
@@ -71,7 +75,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/bxk.svg" class="avatar" srcset="images/bxk.svg 2x" alt="BxK logo">
+        <img src="images/avatar.webp" class="avatar" srcset="images/avatar.webp 2x" alt="BxK logo">
 
         <!-- Title -->
         <h1 role="heading">Ben & Kayla</h1>
