--- a/privacy.html
+++ b/privacy.html
@@ -7,8 +7,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>LittleLink Privacy Policy</title>
-    <meta name="description" content="https://littlelink.io" />
-    <meta name="author" content="Seth Cottle" />
+    <meta name="description" content="https://bxk.link" />
+    <meta name="author" content="Ben & Kayla Ohe" />
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -25,12 +25,16 @@
          Dark:   css/skeleton-dark.css
      -->
 
-    <link rel="stylesheet" href="css/skeleton-auto.css" />
+    <link rel="stylesheet" href="css/skeleton-dark.css" />
     <link rel="stylesheet" href="css/brands.css" />
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/littlelink.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
 
   </head>
 
@@ -80,13 +84,13 @@
             <br />
             <br />
             <!-- Here you can add any analytics companies you use and what they track -->
-            <b>1.) Example LLC.</b><br />
+            <b>1.) Cloudflare, Inc.</b><br />
             Personal Data:
             <i
               >various types of Data as specified in the privacy policy of the
               service</i
             ><br />
-            <a href="https://example.com/privacy/"
+            <a href="https://www.cloudflare.com/privacypolicy/"
               >Privacy Policy</a
             >
           </p>
@@ -104,14 +108,14 @@
             <br />
             <br />
             <!-- Add any external cdn's and they use and what they track -->
-            <b>1.) Example LLC</b><br />
+            <b>1.) Google Fonts</b><br />
             Personal Data:
             <i
               >Usage Data; various types of Data as specified in the privacy
               policy of the service</i
             >
             <br />
-            <a href="https://example.com/privacy/"
+            <a href="https://policies.google.com/privacy"
               >Privacy Policy</a
             >
           </p>
@@ -131,14 +135,14 @@
             <br />
             <br />
             <!-- Here you can add any hosting companies you use and what they track -->
-            <b>1.) Example LLC.</b><br />
+            <b>1.) Cloudflare, Inc.</b><br />
             Personal Data:
             <i
               >various types of Data as specified in the privacy policy of the
               service</i
             >
             <br />
-            <a href="https://example.com/privacy"
+            <a href="https://www.cloudflare.com/privacypolicy/"
               >Privacy Policy</a
             >
           </p>
