--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
         <!-- Your Image Here -->
         <img src="images/avatar.webp" class="avatar" srcset="images/avatar.webp 2x" alt="BxK logo">
 
-        <!-- Title -->
-        <h1 role="heading">Ben & Kayla</h1>
-
         <!-- Short Bio -->
         <p>Travel • Tech • Food</p>
 
@@ -133,7 +130,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <p><small><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</small></p>
 
       </div>
     </div>
