--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
+    <link rel="stylesheet" href="css/brands-extended.css">
 
 
   <!-- Favicon
@@ -116,6 +117,8 @@
         <a class="button button-instagram" href="https://www.instagram.com/ben.and.kayla" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a><br>
         <!-- Threads -->
         <a class="button button-threads" href="https://www.threads.net/@ben.and.kayla" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/threads.svg" alt="Threads Logo">Threads</a><br>
+        <!-- Vero -->
+        <a class="button button-vero" href="https://vero.co/benandkayla" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons-extended/vero.svg" alt="Vero Logo">Vero</a><br>
         <!-- Mastodon -->
         <a class="button button-mastodon" href="https://mstdn.social/@BenandKayla" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a><br>
         <!-- Bluesky -->
