--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="images/avatar.webp" class="avatar" srcset="images/avatar.webp 2x" alt="BxK logo">
 
         <!-- Short Bio -->
-        <p>Travel • Tech • Food</p>
+        <p>Travel - Tech - Food</p>
 
         <!--
 
