General smaller Logo Updates

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
+  <title>B&K Link Page</title>
   <meta name="description" content="https://bxk.link">
-  <meta name="author" content="Ben & Kayla Ohe">
+  <meta name="author" content="Ben & Kayla">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -79,6 +79,7 @@
         <img src="images/avatar.webp" class="avatar" srcset="images/avatar.webp 2x" alt="BxK logo">
 
         <!-- Short Bio -->
+        <br>
         <p>Travel - Tech - Food</p>
 
         <!--
