--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <html lang="en">
 
 <head>
+  <!-- Plausible metrics -->
+  <script defer data-domain="bxk.link" src="https://plausible.benandkayla.com/js/script.outbound-links.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
