--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <!-- Mastodon -->
         <a class="button button-mastodon" href="https://mstdn.social/@BenandKayla" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a><br>
         <!-- Bluesky -->
-        <a class="button button-bluesky" href="https://bsky.app/profile/bxk.bsky.social" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a><br> 
+        <a class="button button-bluesky" href="https://bsky.app/profile/benandkayla.com" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/bluesky.svg" alt="Bluesky Logo">Bluesky</a><br> 
 
 
 
